force-app/main/default/objects/Property_Tax_History__c/Property_Tax_History__c.object-meta.xml
<CustomObject>
    <description>House Canary Property Tax History</description>
    <label>Property Tax History</label>
    <nameField>
        <label>Property Tax History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Tax History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>