force-app/main/default/objects/Property_Tax_History__c/fields/apn__c.field-meta.xml
<CustomField>
    <fullName>apn__c</fullName>
    <label>APN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>