force-app/main/default/objects/Property_Tax_History__c/fields/assessment_year__c.field-meta.xml
<CustomField>
    <fullName>assessment_year__c</fullName>
    <description>assessment year</description>
    <label>assessment year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>