force-app/main/default/objects/Property_Tax_History__c/fields/RelatedProperty__c.field-meta.xml
<CustomField>
    <fullName>RelatedProperty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Property for Houscanary Tax History</description>
    <inlineHelpText>Property for Houscanary Tax History</inlineHelpText>
    <label>RelatedProperty</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Property Tax History</relationshipLabel>
    <relationshipName>Property_Tax_History</relationshipName>
    <type>Lookup</type>
</CustomField>