force-app/main/default/objects/Property_Tax_History__c/fields/tax_amount__c.field-meta.xml
<CustomField>
    <fullName>tax_amount__c</fullName>
    <description>Amount in dollars of tax owed on the property</description>
    <label>tax_amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>