force-app/main/default/objects/Property_Tax_History__c/fields/tax_year__c.field-meta.xml
<CustomField>
    <fullName>tax_year__c</fullName>
    <description>Tax year for which the assessment applies</description>
    <inlineHelpText>Tax year for which the assessment applies</inlineHelpText>
    <label>tax year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>