force-app/main/default/objects/Property_Tax_History__c/fields/total_assessed_value__c.field-meta.xml
<CustomField>
    <fullName>total_assessed_value__c</fullName>
    <description>The total assessed value of both land and improvements (before exemptions, if any) as reported on the county tax/assessment roll in the indicated year.</description>
    <inlineHelpText>The total assessed value of both land and improvements (before exemptions, if any) as reported on the county tax/assessment roll in the indicated year.</inlineHelpText>
    <label>total assessed value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>